{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 8,
  "lineage": "6b601cb8-e3af-fec4-476e-394c70a3cb40",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW-VPC01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:730335388545:internet-gateway/igw-09d58c9a766959cb6",
            "id": "igw-09d58c9a766959cb6",
            "owner_id": "730335388545",
            "tags": {
              "Name": "IGW-VPC01"
            },
            "tags_all": {
              "Name": "IGW-VPC01"
            },
            "vpc_id": "vpc-0bea933e8edf2c1bf"
          },
          "dependencies": [
            "aws_vpc.VPC01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09d58c9a766959cb6",
            "id": "r-rtb-0524fbabd76abcbac1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0524fbabd76abcbac",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW-VPC01",
            "aws_route_table.RT-VPC01",
            "aws_vpc.VPC01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT-VPC01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:730335388545:route-table/rtb-0524fbabd76abcbac",
            "id": "rtb-0524fbabd76abcbac",
            "owner_id": "730335388545",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "RT-VPC01"
            },
            "tags_all": {
              "Name": "RT-VPC01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bea933e8edf2c1bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088fcd50460e72e5b",
            "route_table_id": "rtb-0524fbabd76abcbac",
            "subnet_id": "subnet-00506d5778670cf76"
          },
          "dependencies": [
            "aws_route_table.RT-VPC01",
            "aws_subnet.SUBNET02",
            "aws_vpc.VPC01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SUBNET02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:730335388545:subnet/subnet-00506d5778670cf76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00506d5778670cf76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335388545",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SUBNET02"
            },
            "tags_all": {
              "Name": "SUBNET02"
            },
            "vpc_id": "vpc-0bea933e8edf2c1bf"
          },
          "dependencies": [
            "aws_vpc.VPC01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:730335388545:vpc/vpc-0bea933e8edf2c1bf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aa63ee00e9f092ea",
            "default_route_table_id": "rtb-0486d4a67afe51948",
            "default_security_group_id": "sg-0689d8739c903b03a",
            "dhcp_options_id": "dopt-0128d0619a4dced2b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bea933e8edf2c1bf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0486d4a67afe51948",
            "owner_id": "730335388545",
            "tags": {
              "Name": "VPC01"
            },
            "tags_all": {
              "Name": "VPC01"
            }
          }
        }
      ]
    }
  ]
}